# tfy-electron2312

./: functions.js  main-electron.js  main.js  package-lock.json  package.json  preload.js  test.js  utils.py
public/: electron.js
src/: App.css  App.js  Aurora.css  Settings.js  Sidebar.js  StarBorder.css  StarBorder.js  ThemeContext.js  index.css  main.js  preload.js  themes.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Login.js  Modal.js  Sidebar.css  Sidebar.js  UpdateNotification.js
src/pages/: About.js  Apps.js  Dashboard.js  Extra.js  Gaming.js  Settings.js  Tools.js  Updates.js
src/utils/: Disable Bluetooth.cmd  Disable Printing.cmd  Disable Search Indexing.cmd  Disable VPN support.cmd  Enable Bluetooth.cmd  Enable FSO & Game Bar Support.reg  Enable Printing.cmd  Enable Search Indexing.cmd  Enable VPN support.cmd  brave.bat  epic.bat  faceitac.bat  installer.js  malwarebytes.bat  mb.bat  rar.bat  spotify.bat  steam.bat  stremio.bat  visualcode.bat  vlc.bat
